# Madelung

./: .gitignore  CMakeLists.txt  README.md  config.yaml  gaunt_factor_test.cpp  legendre.f90  legendre.h  legendre_test.cpp  madelung_test.cpp
.github/workflow/: gcc9
Madelung/: CMakeLists.txt  Lattice.cpp  Lattice.hpp  Matrix.hpp  MultipoleMadelung.cpp  MultipoleMadelung.hpp  common.hpp  gaunt_factor.cpp  integer_factors.hpp
include/: LAPACK.hpp  Matrix.hpp
lib/Multipole/: LatticeModule.f90  MadelungModule.f90  createLattice.f90  higherOrderMadelung.hpp  multipole_madelung.h
reference/: CMakeLists.txt
reference/IntegrationVP/: CMakeLists.txt
reference/IntegrationVP/driver/: CMakeLists.txt
reference/IntegrationVP/lib/: CMakeLists.txt  cbeschb.F90
reference/IntegrationVP/plib/: CMakeLists.txt
reference/IntegrationVP/src/: CMakeLists.txt  ChargeDensityModule.F90  VPI_main.f  git_version.h  printScfResults.F90  print_version_include.h
reference/Misc/: CMakeLists.txt
reference/Multipole/: CMadelungModule.f90  CMakeLists.txt  GauntFactorsModule.f90  MadelungModule.f90  calcHigherOrderMadelung.cpp  calcHigherOrderMadelung.hpp  higherOrderMadelung.cpp  higherOrderMadelung.hpp  main.cpp  ord3v.f90
reference/MultipoleMoments/: RhoTotalNewL  direct_exp.py  gaunt_coefficents.py  integrate.py  multipole_moments.py  multipole_moments_exp.py
src/: CMakeLists.txt  config.cpp  config.hpp  io.cpp  io.hpp  main.cpp
src/Madelung/: CMakeLists.txt  MultipoleMadelung.cpp  MultipoleMadelung.hpp  common.hpp  gaunt_factor.cpp  gaunt_factor.f90  gaunt_factor.hpp  integer_factors.cpp  integer_factors.hpp  lattice_utils.cpp  lattice_utils.hpp  madelung.cpp  madelung.hpp  madelung_term.hpp  utils.hpp
src/Misc/: CMakeLists.txt  associatedLegendreFunction.hpp
src/app/: CMakeLists.txt  config.cpp  config.hpp  io.cpp  io.hpp  main.cpp
src/common/: Array3d.hpp  CMakeLists.txt  NDArray.hpp
src/lib/: CMakeLists.txt
src/lib/Madelung/: MultipoleMadelung.cpp  debug.hpp  gaussq.h  spherical_harmonics.hpp
src/lib/Math/: CMakeLists.txt  gaunt_factor.hpp  legendre.hpp  spherical_harmonics.cpp  spherical_harmonics.h  spherical_harmonics.hpp  utils.hpp
src/lib/MultipoleMadelung/: CMakeLists.txt  MultipoleMadelung.cpp  madelung_term.hpp  utils.hpp
src/lib/MultipoleMoments/: CMakeLists.txt  MultipoleMoments.cpp  MultipoleMoments.hpp  alloy_component.f90
src/lib/common/: CMakeLists.txt  Matrix.hpp  NDArray.hpp  common.hpp
tests/: CMakeLists.txt  boost_test.cpp  gaunt_factor_test.cpp  legendre_test.cpp  madelung_test.cpp  math_test.cpp  multi_array_test.cpp  multipole_moments_tests.cpp  regression_supercell_test.cpp  regression_test.cpp  spherical_harmonics_test.cpp
tests/data/: RhoTildaL
